Fixes for layout

--- a/text/complexity/langcomplexity/langcomplexity.tex
+++ b/text/complexity/langcomplexity/langcomplexity.tex
@@ -186,7 +186,7 @@ Variables have a more complex structure
 
 \begin{figure}[htb]
 	\includegraphics[width=0.97\textwidth]{complexity/langcomplexity/pictures/satastsp}
-	\caption{The tour for the expression $\underbrace{(x_1\vee\lnot x_2)}_{c_1}\wedge \underbrace{x_2}_{c_2}$}
+	\caption{The tour for the expression $(x_1\vee\lnot x_2)\wedge x_2$}
 	
 \end{figure}
 
@@ -579,6 +579,3 @@ suspected, but not proven, to be proper.
 
 The connection to \NPTIME is unknown, but $\NPTIME\subset \mathtt{BQP}$ would 
 imply $\NPTIME\neq \PTIME$.
-
-\subsection{Why \PTIME is probably not \NPTIME}
-\cite{impagliazzo1995personal}
