--- a/text/main.tex
+++ b/text/main.tex
@@ -91,18 +91,18 @@
 \maketitle
 \tableofcontents
 \chapter{Introduction}
-	\include*{introduction/introduction/introduction}
-	\include*{introduction/for/for}
-	\include*{introduction/while/while}
+	\include{introduction/introduction/introduction}
+	\include{introduction/for/for}
+	\include{introduction/while/while}
 
 \chapter{Computability}
-	\include*{computability/transforms/transforms}
-	\include*{computability/completeness/completeness}
-	\include*{computability/self/self}
+	\include{computability/transforms/transforms}
+	\include{computability/completeness/completeness}
+	\include{computability/self/self}
 
 \chapter{Complexity}
-	\include*{complexity/complexity/complexity}
-	\include*{complexity/langcomplexity/langcomplexity}
+	\include{complexity/complexity/complexity}
+	\include{complexity/langcomplexity/langcomplexity}
 
 \bibliography{biblio}{}
 \bibliographystyle{plain}
