--- a/text/computability/transforms/transforms.tex
+++ b/text/computability/transforms/transforms.tex
@@ -258,7 +258,7 @@ Proposing that we can statically fix arguments in our program leads important re
 \end{theorem}
 \begin{proof}
 	By the second Futamura projection 
-	$\Compiler{B}{A} = \interpret[A]{spec}(spec, \Interpreter{B})$
+	\[\Compiler{B}{A} = \interpret[A]{spec}(spec, \Interpreter{B})\]
 \end{proof}
 
 Note however that the reversal is not necessarily true: For example, we know, that 
